plugins/cardwall/www/themes/default/css/style.css
.cardwall_board-actions {
    text-align: right;
    margin-bottom: 1em;
}
.cardwall_board table {
    clear:both;
    border-collapse: collapse;
}
#cardwall_board-nifty {
    float: right;
    color: #999;
}
.cardwall_board p {
  font-size:100%;
  font-weight:normal;
  margin: 0;
}
.cardwall_board ul, .cardwall_board li{
  list-style:none;
}
.cardwall_board ul{
  padding: 0em;
}
.cardwall_board.nifty ul{
  padding: 3em;
}

.cardwall_board .toggle-collapse {
    display: none;
}

.cardwall_board .card {
  cursor: move;
  -moz-box-shadow:1px 1px 3px rgba(33,33,33,.3);
  -webkit-box-shadow: 1px 1px 3px rgba(33,33,33,.3);
  box-shadow: 1px 1px 3px rgba(33,33,33,.3);
  background: #ffe;
}
.cardwall_board .nodrag .card {
  cursor: auto;
  background: #f9f9f9;
  height: 100%;
  -moz-box-shadow:none;
  -webkit-box-shadow: none;
  box-shadow: none;
}
.cardwall_board .nodrag .card,
.cardwall_board .nodrag .card > .card-container {
    background: #f9f9f9;
}

.widget .cardwall_board .card {
    cursor: auto;
}

.cardwall_board.nifty ul li .card {
    height: 8em;
    font-size: 1.5em;
}
.cardwall_board.nifty ul li {
  -moz-box-shadow:5px 5px 7px rgba(33,33,33,1);
  -webkit-box-shadow: 5px 5px 7px rgba(33,33,33,.7);
  box-shadow: 5px 5px 7px rgba(33,33,33,.7);
  -moz-transition:-moz-transform .15s linear;
  -o-transition:-o-transform .15s linear;
  -webkit-transition:-webkit-transform .15s linear;
}
.cardwall_board ul li.error {
  -moz-box-shadow:5px 5px 12px rgba(254,0,0,1);
  -webkit-box-shadow: 5px 5px 12px rgba(254,0,0,.7);
  box-shadow: 5px 5px 12px rgba(254,0,0,.7);
}
.cardwall_board ul li p.cardwall_board_title {
  font-size:140%;
  font-weight:bold;
  padding-bottom:10px;
}
.cardwall_board.nifty ul li div.cardwall_board_content {
  font-family:"Reenie Beanie",arial,sans-serif;
  font-size:180%;
  height: 83%;
  overflow: hidden;
}
.cardwall_board.nifty ul li {
  -webkit-transform: rotate(-6deg);
  -o-transform: rotate(-6deg);
  -moz-transform:rotate(-6deg);
}
.cardwall_board.nifty ul li:nth-child(even) {
  -o-transform:rotate(4deg);
  -webkit-transform:rotate(4deg);
  -moz-transform:rotate(4deg);
  position:relative;
  top:5px;
/*  background:#cfc; */
}
.cardwall_board.nifty ul li:nth-child(3n) {
  -o-transform:rotate(-3deg);
  -webkit-transform:rotate(-3deg);
  -moz-transform:rotate(-3deg);
  position:relative;
  top:-5px;
/*  background:#ccf; */
}
.cardwall_board.nifty ul li:nth-child(5n) {
  -o-transform:rotate(5deg);
  -webkit-transform:rotate(5deg);
  -moz-transform:rotate(5deg);
  position:relative;
  top:-10px;
}
.cardwall_board.nifty ul.nodrag li {
  -o-transform:none;
  -webkit-transform:none;
  -moz-transform:none;
  -moz-box-shadow:none;
  -webkit-box-shadow:none;
  box-shadow:none;
}
/* magnifying-glass effect. Maybe too disturbing?
.cardwall_board.nifty ul li:hover, ul li:focus{
  box-shadow:10px 10px 7px rgba(0,0,0,.7);
  -moz-box-shadow:10px 10px 7px rgba(0,0,0,.7);
  -webkit-box-shadow: 10px 10px 7px rgba(0,0,0,.7);
  -webkit-transform: scale(1.25);
  -moz-transform: scale(1.25);
  -o-transform: scale(1.25);
  position:relative;
  z-index:5;
}
*/

.cardwall_board_column_hover {
  background: #fcfcfc;
  -moz-box-shadow:1px 1px 3px rgba(33,33,33, .7) inset;
  -webkit-box-shadow: 1px 1px 3px rgba(33,33,33,.7) inset;
  box-shadow: 1px 1px 3px rgba(33,33,33,.7) inset;
}

#tracker_report_renderers li.tracker_report_renderer_tab_plugin_cardwall a {
    background-image: url(../images/ic/sticky-note-pin-faded.png);
}
#tracker_report_renderers li.tracker_report_renderer_tab_plugin_cardwall.tracker_report_renderers-current a {
    background-image: url(../images/ic/sticky-note-pin.png);
}

#plugin_cardwall_qrcode_toggler {
  filter: alpha(opacity=20);
  -khtml-opacity: 0.2;
  -moz-opacity: 0.2;
  opacity: 0.2;
}

@font-face {
  font-family: 'Reenie Beanie';
  font-style: normal;
  font-weight: normal;
  src: local('Reenie Beanie'), local('ReenieBeanie'), url('../fonts/Reenie-Beanie-regular.woff') format('woff');
}

.card_element_edit_form > input[type=text] {
    width: 40px;
}

.card_element_edit_form > input[type=submit] {
    margin-left: 5px;
    margin-right: 5px;
}

.valueOf_remaining_effort {
    min-width: 30px;
}

